# fotura

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  TODO.md  pyproject.toml  pytest.ini
.github/workflows/: main.yml
docs/: development.md
docs/after_each_processors/google_photos_upload_after_each_processor/: google_photos_upload_after_each_processor.md
docs/postprocessors/google_photos_upload_postprocessor/: google_photos_upload_postprocessor.md
docs/processors/: google_photos_upload.md
scripts/: seed_import.py
src/: main.py
src/fotura/: importer.py  main.py  path_format.py
src/fotura/cli/: processor_commands.py
src/fotura/conflict_resolution/: keep_both_strategy.py  registry.py  skip_strategy.py
src/fotura/domain/: media_file.py  photo.py
src/fotura/importing/: media_finder.py
src/fotura/importing/conflict_resolution/: keep_both_strategy.py  registry.py  skip_strategy.py  strategy_base.py
src/fotura/integrations/google_photos/: __init__.py  client.py  uploader.py
src/fotura/io/: files.py  path_resolver.py
src/fotura/io/photos/: exif_data.py
src/fotura/persistence/: database.py  google_photos_upload_repository.py  schema.py  upload_status.py
src/fotura/postprocessors/: google_photos_upload_postprocessor.py  postprocessor.py
src/fotura/preprocessors/: filename_timestamp_extract_preprocessor.py  preprocessor.py
src/fotura/processors/: context.py  fact_type.py  processor_orchestrator.py  processor_setup_error.py  registry.py  resumable.py
src/fotura/processors/after_all_processors/: after_all_processor.py  google_photos_upload_after_all_processor.py
src/fotura/processors/postprocessors/: postprocessor.py  (+1 more)
src/fotura/reporting/: __init__.py  failed_report_item.py  failed_upload_report_item.py  initialize_report_item.py  logging_config.py  modified_report_item.py  move_report_item.py  report.py  report_item.py  skipped_report_item.py  uploaded_report_item.py
src/fotura/services/: photo_finder.py
src/fotura/templates/: report.html
src/fotura/utils/: file_hasher.py  operation_throttle.py  synchronized_counter.py
src/photo_tidy/: exif_data.py  exif_utils.py  main.py  preprocessor.py  sorter.py  tidy.py
src/photo_tidy/conflict_resolution/: keep_both_strategy.py  registry.py  skip_strategy.py  strategy_base.py
src/photo_tidy/postprocessors/: google_photos_upload_postprocessor.py  postprocessor.py
src/photo_tidy/preprocessors/: filename_timestamp_extract_preprocessor.py  preprocessor.py  whatsapp_preprocessor.py
src/photo_tidy/processors/: context.py  registry.py
src/photo_tidy/reporting/: __init__.py  failed_report_item.py  failed_upload_report_item.py  initialize_report_item.py  modified_report_item.py  move_report_item.py  report.py  report_item.py  skipped_report_item.py  uploaded_report_item.py
src/photo_tidy/services/: photo_finder.py
src/photo_tidy/templates/: report.html
tests/: conftest.py  test_sorter.py  test_tidy.py
tests/helpers/: google_photos.py  helper.py  processors.py
tests/integration/: test_photo_sorting.py  test_report_generation.py
tests/postprocessors/: test_google_photos_upload_postprocessor.py  test_google_upload_postprocessor.py
tests/unit/: test_exif_data.py  test_importer.py  test_main.py  test_path_format.py  test_tidy.py
tests/unit/cli/: test_processor_commands.py
tests/unit/conflct_resolution/: test_keep_both_strategy.py  test_skip_strategy.py
tests/unit/conflict_resolution/: test_keep_both_strategy.py  test_skip_strategy.py
tests/unit/importing/: test_media_finder.py  test_synchronized_counter.py
tests/unit/io/: test_files.py  test_media_finder.py  test_path_format.py  test_path_resolver.py
tests/unit/persistence/: test_database.py  test_google_photos_upload_repository.py
tests/unit/postprocessors/: test_google_photos_upload_postprocessor.py
tests/unit/preprocessors/: test_filename_timestamp_extract_preprocessor.py
tests/unit/processors/: conftest.py  test_processor_orchestrator.py
tests/unit/reporting/: test_report.py
tests/unit/services/: test_photo_finder.py
tests/unit/utils/: test_file_hasher.py  test_operation_throttle.py  test_synchronized_counter.py
(+21 files in other folders)
