[project]
name = "phototidy"
version = "0.1.0"
description = "A tool to organize and sort photos based on their metadata"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "piexif>=1.1.3",
    "jinja2>=3.0.0",
    "google-auth>=2.22.0",
    "google-auth-oauthlib>=1.0.0",
    "google-api-python-client>=2.97.0"
]

[project.scripts]
phototidy = "photo_tidy.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/photo_tidy"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=4.0.0",
    "black>=24.1.0",
    "ruff>=0.12.1",
    "ty>=0.0.1a12",
    "pyfakefs>=5.9.1",
    "responses>=0.25.7"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

addopts = [
  "--import-mode=importlib",
  "-s"
]
pythonpath = [
  "src"
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/docs
'''
